classDiagram
    direction LR

    %% ---------- 核心领域层：模块化 Provider ----------
    class SyncModule {
        <<interface>>
        +ID() string
        +Enabled(cfg *Config) bool
        +IPSourceFiles(cfg *Config) []string
        +Sync(ctx, cfg *Config) (*SyncResult, error)
    }
    class Registry {
        -modules map~string,SyncModule~
        -order []string
        +NewRegistry() *Registry
        +Register(m SyncModule)
        +RegisterAll([]SyncModule)
        +Modules() []SyncModule
        +Get(id string) (SyncModule, bool)
    }
    class BuiltinModules {
        <<var>>
        +[]SyncModule = [cfModule{}, dnspodModule{}]
    }
    class cfModule {
        +ID() string
        +Enabled(cfg *Config) bool
        +IPSourceFiles(cfg *Config) []string
        +Sync(ctx, cfg) (*SyncResult, error)
    }
    class dnspodModule {
        +ID() string
        +Enabled(cfg *Config) bool
        +IPSourceFiles(cfg *Config) []string
        +Sync(ctx, cfg) (*SyncResult, error)
    }
    class DNSProvider {
        <<interface>>
        +ListRecords(ctx, domain) ([]Record, error)
        +UpsertRecord(ctx, domain, rec) error
        +DeleteRecord(ctx, domain, id) error
    }
    class CloudflareProvider {
        +Sync(ctx, *config.CFDNSConfig) (*SyncResult, error)
    }
    class DNSPodProvider {
        +Sync(ctx, *config.DNSPodConfig) (*SyncResult, error)
    }
    class Syncer {
        -tester SpeedTester
        -registry *Registry
        -history HistoryStore
        +NewSyncer(tester, registry, hist) *Syncer
        +BuildSyncerFromConfig(cfg, hist) (*Syncer, error)
        +SyncAll(ctx, cfg, onProgress, providers... ) (*SyncSummary, error)
        -selectModules(cfg, providers) []SyncModule
    }
    class SyncSummary {
        +best_ip_count int
        +updated int
        +created int
        +deleted int
        +errors []string
    }
    class SyncResult {
        +Updated int
        +Created int
        +Deleted int
        +Errors []string
    }
    class SpeedTester {
        <<interface>>
        +Run(ctx, cfg) ([]SpeedResult, error)
    }
    class HistoryStore {
        <<interface>>
        +Append(e HistoryEntry) error
        +ReadLatest(n int) ([]HistoryEntry, error)
    }
    class Config {
        +global / cf_ip / cf_dns / dnspod / modules
    }

    SyncModule <|.. cfModule : implements
    SyncModule <|.. dnspodModule : implements
    Registry o-- SyncModule : holds(ordered)
    BuiltinModules ..> cfModule : contains
    BuiltinModules ..> dnspodModule : contains
    DNSProvider <|.. CloudflareProvider : implements
    DNSProvider <|.. DNSPodProvider : implements
    Syncer --> Registry : iterates Modules()
    Syncer --> SyncSummary : returns
    Syncer ..> SyncModule : calls Sync()
    cfModule ..> CloudflareProvider : NewCloudflareProvider().Sync
    dnspodModule ..> DNSPodProvider : NewDNSPodProvider().Sync
    SyncModule ..> SyncResult : returns
    Syncer ..> Config : reads

    %% ---------- IPC 服务端（Go） ----------
    class Server {
        -svc Services
        -ln net.Listener
        +Listen(addr) (int, error)
        +Serve()
        +ServeConn(conn)
        -dispatch(enc, req, reqID) (interface{}, error)
    }
    class Services {
        +Config ConfigService
        +Sync SyncService
        +Speedtest SpeedtestService
        +History HistoryService
        +Daemon DaemonService
        +Version VersionService
    }
    Server --> Services

    %% ---------- IPC 客户端（Rust / Tauri） ----------
    class IpcClient {
        -addr String
        -next_id AtomicI64
        +call(method, params) Result~Value~
        +call_with_progress(method, params, on_progress) Result~Value~
        +ping() / version() / config_get() / ... 13 方法
    }
    class ProgressEvent {
        +req_id i64
        +phase String
        +cur i64
        +total i64
        +message String
    }
    IpcClient ..> ProgressEvent : 解析
    IpcClient ..> Config : 解析/序列化

    %% ---------- GUI 前端（SvelteKit） ----------
    class api {
        <<module>>
        +syncRun(providers?) Promise~SyncSummary~
        +configGet() Promise~Config~
        +speedtestRun() Promise~SpeedResult[]~
        +historyList(n) Promise~HistoryEntry[]~
        +daemonStatus() Promise~DaemonStatus~
    }
    class ipc_types {
        <<typescript types>>
        +VersionInfo / SyncSummary / SpeedResult / ProgressEvent / Config ...
    }
    api ..> ipc_types : 使用

    %% ---------- 跨层关系 ----------
    IpcClient ..> Server : TCP JSON-RPC (JSON Lines)
    api ..> IpcClient : invoke('ipc_request') 经 Rust
